--- a/src/App.scss
+++ b/src/App.scss
@@ -7,23 +7,19 @@ body {
     font-family: sans-serif;
 }
 
-
-/* Header styles */
-
-header {
-    background-color: #333;
-    color: #fff;
-    padding: 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.logo {
-    font-size: 1.5rem;
-    font-weight: bold;
-}
-
+//   /* Header styles */
+//   header {
+//     background-color: #333;
+//     color: #fff;
+//     padding: 1rem;
+//     display: flex;
+//     justify-content: space-between;
+//     align-items: center;
+//   }
+//   .logo {
+//     font-size: 1.5rem;
+//     font-weight: bold;
+//   }
 
 /* Navigation styles */
 
